# spesscomputer

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  package.json
.github/workflows/: deploy-pages.yml
3d/: Lander.blend  Lander.blend1  body.blend  body.blend1
assembly/: compile.sh  demo.a65  linker.cfg
emulator/: .gitignore  Cargo.toml
emulator/src/: main.rs  utils.rs
export/: .gitignore  run.py
godot/: .gitignore  Capsule.tscn  Jupiter.glb.import  Jupiter_1225 Jupiter.png.import  Ship.gd  Space engine.glb.import  Space engine_SpaceEngine_BaseColor.png.import  Thruster.gdshader.uid  Thruster.tscn  Utils.gd.uid  WebHelper.gd  WebHelper.gd.uid  capsule.gd  computer.gd  export_presets.cfg  godot-6502.gdextension  godot-6502.gdextension.uid  icon.svg.import  main.tscn  planet.gd  project.godot  redis-godot.gdextension  ship.tscn  source_code_resource.gd  source_code_resource.gd.uid  space_background.webp.import  spaceship Goodnews.glb.import  test.tscn  thruster.gd
godot-6502/: .env  Cargo.toml  plugin.cfg
godot-6502/.cargo/: config.toml
godot-6502/src/: lib.rs
godot-6502/src/asm6502/: UPSTREAM.md  ast.rs  code_gen.rs  context.rs  directive.rs  mod.rs  options.rs  parser.rs
godot/.godot_templates/: templates-here.txt
godot/addons/: preview.png.import
godot/asm/: demo.a65
godot/code/: simple_code.tres
notebooks/: RedisArray.py  test.ipynb
orchestrator/: controller.py
redis-godot/: Cargo.toml
scripts/: setup_blender_editor_path.sh
web/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
(+138 files in other folders)
