[package]
name = "godot-6502"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
spin_sleep = "1.2.1"
clap = { version = "4.5.16", features = ["derive"] }
log = "0.4.22"
simplelog = "^0.12.2"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
rv6502emu = { git = "https://github.com/valerino/rv6502emu", version = "0.1.0" }

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.godot]
version = "0.2.4"
features = [
    "api-custom",
    "double-precision",
    "experimental-wasm",
    "lazy-function-tables",
]
